[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interface/Settings.gd" type="Script" id=1]

[node name="Settings" type="PopupMenu"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -384.0
alignment = 1

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 128.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
margin_top = 13.0
margin_right = 128.0
margin_bottom = 44.0
text = "BACKGROUND
MUSIC"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 128.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label2" type="Label" parent="VBoxContainer/MarginContainer2"]
margin_top = 21.0
margin_right = 128.0
margin_bottom = 35.0
text = "SOUND EFFECTS"
align = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 128.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label4" type="Label" parent="VBoxContainer/MarginContainer4"]
margin_top = 21.0
margin_right = 128.0
margin_bottom = 35.0
text = "CREDITS"
align = 1

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
margin_top = 243.0
margin_right = 128.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 208.0
margin_top = 83.0
margin_right = 496.0
margin_bottom = 99.0
min_value = -30.0
max_value = 10.0
value = -10.0
tick_count = 5
ticks_on_borders = true

[node name="SfxSlider" type="HSlider" parent="."]
margin_left = 208.0
margin_top = 144.0
margin_right = 496.0
margin_bottom = 160.0
min_value = -30.0
max_value = 10.0
value = -10.0
tick_count = 5
ticks_on_borders = true

[node name="Credits" type="Button" parent="."]
margin_left = 211.0
margin_top = 194.0
margin_right = 499.0
margin_bottom = 242.0
text = "More Info"

[node name="CreditsPopup" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CreditsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="CreditsPopup"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.0
text = "Level Design -

Coding -

Time and Patience -

Story -

Sprites -
"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CreditsPopup"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 255.0
text = "- Nahom

- Nahom

- Nahom

- Nahom

- Pixel Frog at Itch.io or 
@PixelFrogStudio"
align = 1
valign = 1

[connection signal="value_changed" from="MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
